syntax = "proto3";

package omogen.runner;

// A file that is part of the sources of an uncompiled program.
message SourceFile {
  // A relative path to the compilation root where this file should be located.
  string path = 1;

  // The binary contents of the file.
  string contents = 2;
}

// An uncompiled program in some language.
message Program {
  // The source files of this program. All files must have distinct paths.
  repeated SourceFile sources = 1;

  // The language_id of the Language that this program was written in.
  string language_id = 2;
}

// A compiled program ready to be executed in some language.
message CompiledProgram {
  // The compilation root of the program.
  string program_root = 1;

  // The paths, relative to the compilation root.
  repeated string compiled_paths = 2;

  // The language_id of the Language that this program was written in.
  string language_id = 3;
}
